--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,9 +22,6 @@
 </head>
 <body bx-app>
   {{ content }}
-  <script src="http://g.tbcdn.cn/??kissy/k/1.4.0/seed-min.js,thx/brix-core/3.4.5/brix-min.js"></script>
-  {% if page.script %}
-  <script src="{{ site.baseurl }}/{{ page.script }}"></script>
-  {% endif %}
+  {% include scripts.html %}
 </body>
 </html>
