Add canvax and bisheng; update footer

--- a/_includes/ceiling.html
+++ b/_includes/ceiling.html
@@ -21,6 +21,14 @@
         <i class="iconfont mi-mock"></i>
         <span class="name">Mock</span>
       </a>
+      <a href="http://canvax.org">
+        <i class="iconfont mi-canvax"></i>
+        <span class="name">Canvax</span>
+      </a>
+      <a href="https://github.com/nuysoft/bisheng">
+        <i class="iconfont mi-bisheng"></i>
+        <span class="name">Bisheng</span>
+      </a>
       <a href="/cube">
         <i class="iconfont mi-cube"></i>
         <span class="name">Cube</span>
