--- a/_includes/duoshuo.html
+++ b/_includes/duoshuo.html
@@ -1,3 +1,3 @@
 <!-- Duoshuo Comment BEGIN -->
-<div class="ds-thread" data-thread-key="{{ site.baseurl }}{{ page.url | remove_first:'index.html' }}" data-url="http://thx.alibaba-inc.com{{ site.baseurl }}{{ page.url | remove_first:'index.html' }}"></div>
+<div class="ds-thread" data-thread-key="{{ site.baseurl }}{{ page.id }}/" data-url="http://thx.alibaba-inc.com{{ site.baseurl }}{{ page.id }}/"></div>
 <!-- Duoshuo Comment END -->
