调整响应式表格边框样式

--- a/src/table.css
+++ b/src/table.css
@@ -46,7 +46,7 @@
         width: 100%;
         overflow-x: scroll;
         overflow-y: hidden;
-        border: 1px solid #ddd;
+        border-right: 1px solid #ddd;
         -ms-overflow-style: -ms-autohiding-scrollbar;
         -webkit-overflow-scrolling: touch;
     }
