--- a/src/type.css
+++ b/src/type.css
@@ -196,6 +196,10 @@ h6 {
 
 /* 代码 */
 .type code {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    line-height: normal;
     margin: 0 .25em;
     padding: 0 .4em;
     border: 1px solid #DDD;
