--- a/assets/base.css
+++ b/assets/base.css
@@ -45,7 +45,6 @@ a {
 }
 .type h3 {
     font-size: 1.17em;
-    margin: 1em 0;
 }
 .type h4,
 .type h5,
@@ -123,22 +122,61 @@ a {
  */
 #nav {
     background-color: #fff;
+    z-index: 1;
 }
 #nav .logo {
     display: block;
     text-align: center;
-    background: #ed4242 url(http://gtms01.alicdn.com/tps/i1/T1CpsWFoVnXXaWDHYM-160-113.png) 50% -10px no-repeat;
     width: 160px;
     height: 100%;
-    line-height: 1;
+    line-height: 60px;
     vertical-align: middle;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-family: Georgia, serif;
-    -webkit-transition: background-position 0.5s;
-    -o-transition: background-position 0.5s;
-    transition: background-position 0.5s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
 }
+
+/**
+ * 皮肤
+ */
+
+.skin-index #nav .logo {
+    font-size: 50px;
+    letter-spacing: 1px;
+    background: #ed4242 url(http://gtms01.alicdn.com/tps/i1/T1CpsWFoVnXXaWDHYM-160-113.png) 50% -10px no-repeat;
+}
+
+.skin-index #nav.fixed .logo {
+    line-height: 30px;
+    font-size: 20px;
+    background-position: 50% -80px;
+}
+
+.skin-index #nav .logo .ir {
+    display: block;
+    background-color: #ed4242;
+    color: #fff;
+}
+
+.skin-magix .logo {
+    color: #da1e38;
+}
+
+.skin-cube .logo {
+    color: #0e76bc;
+}
+
+.skin-brix-core .logo {
+    color: #0e76bc;
+}
+
+.skin-crox .logo {
+    color: #0e76bc;
+}
+
+
 #nav .logo:hover {
     border-bottom: none;
     color: #FC4349;
@@ -239,7 +277,7 @@ a {
 }
 
 #page .stoc {
-    /*background: none;*/
+    background: none;
 }
 
 #page .stoc ol {
@@ -457,10 +495,6 @@ a {
     #nav.fixed .entry {
         line-height: 30px;
     }
-    #nav.fixed .logo {
-        line-height: 30px;
-        background-position: 50% -80px;
-    }
     #nav.fixed .logo .iconfont {
         display: inline-block;
         font-size: 20px;
@@ -518,6 +552,7 @@ a {
         bottom: 20px;
         left: 50%;
         right: auto;
+        width: 230px;
         padding: 0;
         overflow-y: auto;
         margin-left: 360px;
@@ -565,7 +600,6 @@ a {
     margin: 16px auto;
     -webkit-overflow-scrolling: touch;
     /*background-color: #fff !important;*/
-    border: 1px solid #EAEAEA;
     /*border-bottom: 1px solid #EAEAEA;*/
 }
 
@@ -573,7 +607,6 @@ a {
 .type-toc li {
     overflow: hidden;
     margin-top: 1px;
-    white-space: nowrap;
 }
 
 .type-toc li a {
@@ -593,16 +626,14 @@ a {
 .type-toc li a:hover,
 .type-toc .current {
     background-color: #eee !important;
-    border-bottom: 1px solid #E0E0E0 !important;
+    border-bottom: 1px solid #CECECE !important;
     border-radius: 0 0 3px 3px;
     color: #3187DB !important;
 }
 
 
 .type-toc h2 {
-    border-right: 1px solid #eee;
     margin-bottom: 6px;
-    background: #FBFBFB;
     padding: 0 22px;
     font-size: 18px;
     color: #666;
@@ -704,4 +735,52 @@ ol.type-toc,
 }
 .type-toc::-webkit-scrollbar-thumb:hover {
     background-color: rgba(0, 0, 0, .36);
+}
+
+
+/**
+ * 锚点高亮
+ */
+@-webkit-keyframes highlight {
+  0% { background-color: rgb(255,255,0);}
+  33% { background-color: transparent;}
+  66% { background-color: rgb(255,255,0);  }
+  100% { background-color: transparent; }
+}
+
+@-moz-keyframes highlight {
+  0% { background-color: rgb(255,255,0);}
+  33% { background-color: transparent;}
+  66% { background-color: rgb(255,255,0);  }
+  100% { background-color: transparent; }
+}
+
+@-ms-keyframes highlight {
+  0% { background-color: rgb(255,255,0);}
+  33% { background-color: transparent;}
+  66% { background-color: rgb(255,255,0);  }
+  100% { background-color: transparent; }
+}
+
+@keyframes highlight {
+  0% { background-color: rgb(255,255,0);}
+  33% { background-color: transparent;}
+  66% { background-color: rgb(255,255,0);  }
+  100% { background-color: transparent; }
+}
+
+:target{
+  -webkit-animation: highlight 1.6s ease;  
+  -moz-animation: highlight 1.6s ease;
+  -ms-animation: highlight 1.6s ease;
+  -o-animation: highlight 1.6s ease;
+  animation: highlight 1.6s ease;
+}
+
+h2,h3,h4,h5,h6{
+  -webkit-background-clip: padding-box !important;
+  -moz-background-clip: padding !important;
+  background-clip: padding-box !important;
+  border-top: 50px solid transparent;
+  margin-top: -50px;
 }
