--- a/assets/base.css
+++ b/assets/base.css
@@ -138,6 +138,10 @@ a {
     transition: 0.3s;
 }
 
+#nav.fixed .logo {
+    line-height: 30px;
+}
+
 /**
  * 皮肤
  */
@@ -149,7 +153,6 @@ a {
 }
 
 .skin-index #nav.fixed .logo {
-    line-height: 30px;
     font-size: 20px;
     background-position: 50% -80px;
 }
