--- a/assets/base.css
+++ b/assets/base.css
@@ -163,19 +163,19 @@ a {
     color: #fff;
 }
 
-.skin-magix #nav .logo {
+.skin-magix #nav a.logo {
     color: #da1e38;
 }
 
-.skin-cube #nav .logo {
+.skin-cube #nav a.logo {
     color: #0e76bc;
 }
 
-.skin-brix-core #nav .logo {
+.skin-brix-core #nav a.logo {
     color: #0e76bc;
 }
 
-.skin-crox #nav .logo {
+.skin-crox #nav a.logo {
     color: #0e76bc;
 }
 
